--- a/contact.html
+++ b/contact.html
@@ -55,42 +55,42 @@
 
     <section id="page-header">
         <div class="container">
-            <h1>LiveAboard</h1>
+            <h1>Contact Us</h1>
         </div>
     </section>
 
-    <header id="liveaboard">
-        <div class="container">
+    <header id="contact">
 
-        </div>
     </header>
 
-    <section id="about">
-
+    <section id="contact-info">
         <div class="container">
-            <h2>About the Red Sea One</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at malesuada libero, eget cursus eros. Vivamus
-                in bibendum ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                Morbi nec pretium nunc, in molestie felis. Aliquam finibus erat felis, pellentesque lobortis augue fringilla
-                sit amet. Praesent ornare facilisis mattis. Integer fringilla lacus a orci laoreet lobortis vel nec ligula.
-                Curabitur ut elementum mauris.</p>
             <p>
-                Suspendisse consectetur congue facilisis. Proin ipsum nisl, pellentesque a nunc quis, sollicitudin condimentum purus. Nunc
-                augue sem, ornare non consectetur mollis, lacinia id lectus. Duis augue ipsum, pretium et magna et, ornare
-                luctus orci. Praesent luctus, libero et varius tempus, augue quam suscipit odio, id dictum turpis elit varius
-                erat. Pellentesque at dui ullamcorper, vestibulum nunc et, laoreet orci. In orci augue, aliquet ut commodo
-                sit amet, tempor non nibh.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
         </div>
-        </div>
-
     </section>
 
-    <section id="liveaboard-gallery">
+    <section id="contact-form">
         <div class="container">
-            <div class="text-center">
-                <img src="assets/resources/images/image-placeholder-720x380.jpg" class="img-fluid">
-            </div>
+            <h2>Got any questions?</h2>
+            <form class="container-fluid">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Full Name">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Subject">
+                </div>
+                <div class="form-group">
+                    <textarea type="text" class="form-control" placeholder="Message"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info ">Send Message</button>
+            </form>
         </div>
     </section>
 
